Moved to shared assets for Android.

--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -16,6 +16,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    sourceSets {
+        main {
+            assets.srcDirs = ['../../Web']
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
