Added early testing for React Native.

--- a/.gitignore
+++ b/.gitignore
@@ -144,8 +144,8 @@ captures/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+*.jks
+*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
@@ -175,5 +175,7 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
-.DS_Store
 .idea
+node_modules
+vendor/
+ios/Pods/
