--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-menu/menu": "^0.5.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "@xmldom/xmldom": "xmldom/xmldom",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
