Add android material icons
* Add react-native-vector-icons with the Google Community Material Design iconset.
* Add an Icon component that consistently displays icons between SF Symbols and the Material set.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -225,3 +225,10 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+// Configuration for react-native-vector-icons
+// We're only using Google's Community Material Icons
+project.ext.vectoricons = [
+    iconFontNames: ['MaterialCommunityIcons.ttf']
+]
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
