--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.0",
-    "react-native-sfsymbols": "^1.2.0"
+    "react-native-sfsymbols": "^1.2.0",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
