--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@xmldom/xmldom": "xmldom/xmldom",
     "react": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-context-menu-view": "^1.5.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.0",
