--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-context-menu-view": "^1.5.2",
+    "react-native-fast-image": "^8.6.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-safe-area-context": "^3.3.2",
