--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-fast-image": "^8.6.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.22.0",
     "react-native-sfsymbols": "^1.2.0",
