--- a/ios/epilogue/Info.plist
+++ b/ios/epilogue/Info.plist
@@ -71,5 +71,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Epilogue can upload book cover photos to Open Library.</string>
 </dict>
 </plist>
