--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native": "0.69.5",
     "react-native-context-menu-view": "^1.5.2",
     "react-native-fast-image": "^8.6.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-picker": "^7.0.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-safe-area-context": "^3.3.2",
