--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,6 +25,6 @@ target 'epilogue' do
 
   post_install do |installer|
     react_native_post_install(installer)
-    __apply_Xcode_12_5_M1_post_install_workaround(installer)
+#    __apply_Xcode_12_5_M1_post_install_workaround(installer)
   end
 end
