--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,47 +1,21 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext {
-        RNNKotlinVersion = "1.7.10"
-        buildToolsVersion = "30.0.2"
+        buildToolsVersion = "34.0.0"
         minSdkVersion = 25
         compileSdkVersion = 34
         targetSdkVersion = 31
-        ndkVersion = "21.4.7075529"
-        kotlin_version = "1.7.10"
+        ndkVersion = "25.1.8937393"
+        kotlinVersion = "1.8.0"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
-        classpath("com.android.tools.build:gradle:4.2.2")
-//        classpath('com.android.tools.build:gradle:7.2.2')
-//        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10")
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath("com.android.tools.build:gradle")
+        classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
 }
 
-allprojects {
-    repositories {
-        maven {
-            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url("$rootDir/../node_modules/react-native/android")
-        }
-        maven {
-            // Android JSC is installed from npm
-            url("$rootDir/../node_modules/jsc-android/dist")
-        }
-        mavenCentral {
-            // We don't want to fetch react-native from Maven Central as there are
-            // older versions over there.
-            content {
-                excludeGroup "com.facebook.react"
-            }
-        }
-        google()
-        maven { url 'https://www.jitpack.io' }
-    }
-}
+apply plugin: "com.facebook.react.rootproject"
