--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
-    "@xmldom/xmldom": "xmldom/xmldom",
+    "@xmldom/xmldom": "^0.8.10",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-context-menu-view": "^1.5.2",
