--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/datetimepicker": "^7.7.0",
     "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-menu/menu": "https://github.com/react-native-menu/menu#11a60059ee59a58c8e67f50f81011db32952cb52",
+    "@react-native-menu/menu": "^1.1.1",
+    "@react-native/babel-preset": "^0.75.2",
     "@react-native/metro-config": "^0.73.5",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@xmldom/xmldom": "^0.8.10",
     "react": "18.2.0",
-    "react-native": "0.73.3",
+    "react-native": "0.74",
     "react-native-context-menu-view": "^1.10.0",
     "react-native-fast-image": "^8.6.0",
     "react-native-fs": "^2.20.0",
@@ -31,7 +33,7 @@
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.22.0",
+    "react-native-screens": "^3.34.0",
     "react-native-sfsymbols": "^1.2.0",
     "react-native-vector-icons": "^9.1.0",
     "showdown": "^2.1.0"
