--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "pods": "npx pod-install ios"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
