Upgrade to RN .76.9.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:exported="true"
+      android:supportsRtl="true"
       >
       <activity
         android:name=".MainActivity"
