--- a/package.json
+++ b/package.json
@@ -12,42 +12,51 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@invertase/react-native-apple-authentication": "^2.2.2",
-    "@react-native-async-storage/async-storage": "^1.16.1",
-    "@react-native-clipboard/clipboard": "^1.10.0",
-    "@react-native-community/datetimepicker": "^7.7.0",
+    "@invertase/react-native-apple-authentication": "^2.4.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-menu/menu": "^1.1.1",
-    "@react-native/babel-preset": "^0.75.2",
-    "@react-native/metro-config": "^0.73.5",
+    "@react-native-menu/menu": "^1.2.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "@xmldom/xmldom": "^0.8.10",
-    "react": "18.2.0",
-    "react-native": "0.74",
-    "react-native-context-menu-view": "^1.10.0",
-    "react-native-fast-image": "^8.6.0",
+    "react": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-context-menu-view": "^1.19.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.2.0",
-    "react-native-image-picker": "^7.1.2",
+    "react-native-gesture-handler": "^2.27.2",
+    "react-native-image-picker": "^7.2.3",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-navigation-bar-color": "^2.0.2",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-reanimated": "3.17.5",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^3.34.0",
-    "react-native-sfsymbols": "^1.2.0",
-    "react-native-vector-icons": "^9.1.0",
+    "react-native-sfsymbols": "^1.2.2",
+    "react-native-vector-icons": "^10.2.0",
     "showdown": "^2.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.66.2",
-    "react-test-renderer": "17.0.2"
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/runtime": "^7.27.6",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.76.9",
+    "@react-native/eslint-config": "0.76.9",
+    "@react-native/metro-config": "0.76.9",
+    "@react-native/typescript-config": "0.76.9",
+    "@types/react": "^18.3.23",
+    "@types/react-test-renderer": "^18.3.1",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0",
+    "prettier": "2.8.8",
+    "react-test-renderer": "18.3.1",
+    "typescript": "5.0.4"
   },
   "jest": {
     "preset": "react-native"
