--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -32,7 +32,7 @@ jobs:
 
       - uses: oven-sh/setup-bun@v1
         with:
-          bun-version: 1.1.x
+          bun-version: 1.1.22
 
       - name: Install JS deps
         run: bun install --frozen-lockfile
