--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-native-menu/menu": "^1.2.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/native-stack": "^6.5.0",
+    "@react-navigation/stack": "^6.4.0",
     "@xmldom/xmldom": "^0.8.10",
     "react": "19.0.0",    
     "react-native": "0.78.3",
